# fred-baptiste-python-deepdive

./: .gitignore  fred-baptiste-python-deepdive.code-workspace  main.py  pyproject.toml
Part 1/Section 09 - Modules, Packages and Namespaces/: 03 - Imports and importlib.ipynb
Part 1/part2_practice/Dictionaries/: 11_creatinng_dicts.py  13_common_operations.py
part1_practice/command_line_args/args/: example10.py  example7.py  example8.py  example9.py
part1_practice/section7_scope_closures_decorators/: 103_closures.py  104_decorators.py  108_dec_app_stacked_logger.py  110_dec_app_memoization.py  112_dec_factories.py  113_dec_app_decorator_Class.py  114_dec_app_decorating_Classes.py  115_dec_app_dispatching_part1.py  116_dec_app_dispaching_part2.py  116_dec_app_dispaching_part3.py  dec_app_stacked_logger.py  decorator_pbar_async.py  decorator_pbar_threadpool.py
part1_practice/section_8_tuples_as_data_structures/: 119_tuples_as_data_structures.py  122_nametuples.py  124_namedtuples_extending_and_modifying.py  126_namedtuples_doc_strings_and_Default_Values.py  128_named_tuples_app_alternative_for_dics.py
part1_practice/section_9_modules_packages_namespace/: 131_how_python_import_modules.py  132_import_and_importlib.py  134_import_variants_and_misconceptions.py  135_reloading_modules.py  136_using__main__.py  What is a Module.ipynb  create_module1.py  create_module2.py  create_module_file.py  module1.py  modules_in_python.py  test.py
part2_practice/Dictionaries/: 11_creatinng_dicts.py  13_common_operations.py
req/: requirements-dev.txt  requirements.txt
(+11 files in other folders)
