[project]
name = "fred-baptiste-python-deepdive"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "black>=25.12.0",
    "debugpy>=1.8.19",
    "duckdb>=1.4.3",
    "ipython>=9.8.0",
    "ipywidgets>=8.1.8",
    "jupyterlab>=4.5.1",
    "mypy>=1.19.1",
    "pandas>=2.3.3",
    "polars>=1.36.1",
    "pre-commit>=4.5.1",
    "ptpython>=3.0.32",
    "pyarrow>=22.0.0",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "requests>=2.32.5",
    "ruff>=0.14.10",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "shap>=0.49.1",
]

[tool.ruff]
# Core settings
line-length = 100

# Linting settings
[tool.ruff.lint]
select = ["E", "F", "B"] # pycodestyle, pyflakes, bugbear
extend-select = ["I"] # Add import rules
ignore = ["E501"] # Ignore line-too-long warnings

# Formatting settings (Ruff acts like Black by default with these)
[tool.ruff.format]
quote-style = "double" # Use double quotes for strings
indent-style = "space" # Use spaces for indentation

